# DagsterFundamentals

./: hello-dagster.py
.tmp_dagster_home_103wpmxu/history/: runs.db
.tmp_dagster_home_103wpmxu/history/runs/: 53476b68-1f40-4350-9102-8b1e7ee5779c.db  58a8061f-10ee-4a25-b506-315ca897b800.db  999d682e-fee0-4319-b565-80af429ad83d.db  9f6951cc-0aed-4033-a072-2921029b8e94.db  a8fdf89f-11b5-43a3-865e-d1e6e4e045aa.db  bafc3aee-2ff2-4a76-884a-b6a1166f8ed4.db  d120c712-3a57-459d-9c56-acb0dfa79937.db  daf6a436-2546-4517-996b-35cac94e99d7.db  fc940c89-1b65-4fbe-89bd-b9cd08abb67e.db  index.db
.tmp_dagster_home_103wpmxu/schedules/: schedules.db
.tmp_dagster_home_sdhcp7_q/history/: runs.db
.tmp_dagster_home_sdhcp7_q/history/runs/: 0c8f6af7-8c99-416a-9011-540b8986e263.db  26377b38-a2e9-49a2-bff3-6aacc3747f46.db  2a132319-ffdd-4b33-821b-751c5a597c88.db  3572aa63-1166-4452-91a7-fa762c34e3dd.db  482be77d-1d6f-40e4-a1d1-2fdd15a4a67a.db  52a88982-ddcf-4606-a3ef-7d6bfa9ed6ec.db  65a0a984-d523-427e-87db-5ae924d14925.db  6b4d1559-3a57-48e2-937e-c0f81cee582b.db  71bc4b5c-da72-40e9-801a-66e8059487dd.db  7c4e5a77-c4eb-4766-8021-e6b335bebcde.db  8752e599-c594-406b-9386-fdf205e87b17.db  972243b4-75f4-4687-b75f-2606b0355114.db  index.db  (+4 more)
.tmp_dagster_home_sdhcp7_q/schedules/: schedules.db
dagster-movie-pipeline/: schema.sql
dagster-movie-pipeline/movie_pipeline/: README.md  pyproject.toml  setup.cfg  setup.py
dagster-movie-pipeline/movie_pipeline/movie_pipeline/: __init__.py  definitions.py
dagster-movie-pipeline/movie_pipeline/movie_pipeline/ops/: ingest_movies.py
(+38 files in other folders)
